--- a/main.html
+++ b/main.html
@@ -42,8 +42,7 @@
     </header>
     <main>
         <h2>About This Page</h2>
-        <p>This is a simple example of an HTML page with minimal styling. You can use it as a template to build more complex websites.</p>
-        <p>Feel free to explore and customize it to suit your needs!</p>
+        <p>Sigma Sigma seinal, kes on neist skibidim</p>
     </main>
     <footer>
         <p>&copy; 2024 My Website</p>
