--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- refresh -->
+    <meta http-equiv="refresh" content="5">
+    
     <meta name="description" content="A basic HTML page example">
     <title>H&auml;ki seda lehek&uuml;lge</title>
     <style>
