--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- refresh -->
-    <meta http-equiv="refresh" content="5">
+    <!-- refresh 
+    <meta http-equiv="refresh" content="5"> -->
     
     <meta name="description" content="A basic HTML page example">
     <title>H&auml;ki seda lehek&uuml;lge</title>
@@ -46,6 +46,7 @@
     <main>
         <h2>About This Page</h2>
         <p>Sigma Sigma seinal, kes on neist skibidim</p>
+        <button onclick="window.location.href='https://johanjoosep.github.io/hakisedalehte/tase1.html';">Tase 1</button>
     </main>
     <footer>
         <p>&copy; 2024 My Website</p>
