--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- refresh 
     <meta http-equiv="refresh" content="5"> -->
     
-    <meta name="description" content="A basic HTML page example">
+    <meta name="description" content="Küberoskuste treenimis lehekülg">
     <title>H&auml;ki seda lehek&uuml;lge</title>
     <style>
         body {
@@ -32,10 +32,6 @@
             background: #333;
             color: #fff;
         }
-        a {
-            color: #007bff;
-            text-decoration: none;
-        }
     </style>
 </head>
 <body>
@@ -48,7 +44,7 @@
         <button onclick="window.location.href='https://johanjoosep.github.io/hakisedalehte/tase1.html';">Tase 1</button>
     </main>
     <footer>
-        <p>&copy; 2024 My Website</p>
+        <p> fff </p>
     </footer>
 </body>
 </html>
