--- a/tase1.html
+++ b/tase1.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>  <!-- See on lehekülg html -->
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- refresh 
     <meta http-equiv="refresh" content="5"> -->
-    <meta name="description" content="A basic HTML page example">
+    
+    <meta name="description" content="Küberoskuste treenimis lehekülg">
     <title>H&auml;ki seda lehek&uuml;lge</title>
     <!-- Siin on CSS kood, milles on kirjas lehekülje design -->
     <style> 
@@ -26,12 +27,7 @@
         main {
             padding: 1.5rem;
         }
-        footer {
-            text-align: center;
-            padding: 1rem 0;
-            background: #333;
-            color: #fff;
-        }
+
         a {
             color: #007bff;
             text-decoration: none;
@@ -41,8 +37,7 @@
 <!-- Siin on lehekülje peamised osad -->
 <body>
     <header>
-        <h1>H&auml;ki seda lehek&uuml;lge</h1>
-        <p>T&ouml;&ouml;tlemisel</p>
+        <button onclick="window.location.href='https://johanjoosep.github.io/hakisedalehte/';">Kodu</button>
     </header>
     <main>
         <h2>Tase 1</h2>
@@ -69,8 +64,5 @@
             }
         </script>
     </main>
-    <footer>
-        <p>&copy; 2024 My Website</p>
-    </footer>
 </body>
 </html>
