--- a/tase1.html
+++ b/tase1.html
@@ -44,7 +44,7 @@
         <button onclick="checkInput()">Submit</button> <!-- Siin käivitab funktsiooni chackInput(), mis kontrollib kas parool on õige -->
     
         <p id="message" style="display: none;">Hea töö!</p>
-        <button id="newButton" style="display: none;" onclick="window.location.href='https://johanjoosep.github.io/hakisedalehte/tase2.html';">Go to Example Site</button> <!-- järgmisele tasemele -->
+        <button id="newButton" style="display: none;" onclick="window.location.href='https://johanjoosep.github.io/hakisedalehte/tase2.html';">Tase 2</button> <!-- järgmisele tasemele -->
     
         <!-- Siin on JavaScript -->
         <script>
