--- a/tase3.html
+++ b/tase3.html
@@ -35,7 +35,7 @@
     <main>
         <h2>Tase 3</h2>
         <p>Lahenduse võib leida sellest pildist.</p>
-        <img src="Parooliga_pilt.jpg" height="400">
+        <img src=https://github.com/JohanJoosep/hakisedalehte/blob/main/Parooliga_pilt.jpg?raw=true height="400">
         <br>
         <input type="text" id="textBox" placeholder="Parool">
         <button onclick="checkInput()">Submit</button>
