--- a/tase4.html
+++ b/tase4.html
@@ -37,7 +37,7 @@
         <p>
         Siin on krüpteeritud sõnum. Püüa aru saada, millist šifreeringut kasutati ja sisesta õige parool! 
         </p>
-        <p><strong>Krüpteeritud tekst:</strong> "mjkvlmjkohz"</p>
+        <p><strong>Krüpteeritud tekst:</strong> "Wklv lv d whvw phvvdjh"</p>
         <input type="text" id="passwordBox" placeholder="Sisesta parool"> 
         <button onclick="checkPassword()">Kontrolli</button>
         
@@ -47,8 +47,9 @@
         <input type="text" id="encryptedText" placeholder="Sisesta krüpteeritud tekst">
         <button onclick="decryptUserInput()">Dekrüpteeri</button>
         <p id="decryptedOutput"></p>
-
+    
+        <!-- Siin on viide eraldi cipher.js failile -->
+        <script src="cipher.js"></script>
     </main>
-    <script src="cipher.js"></script>
 </body>
 </html>
