--- a/tase4.html
+++ b/tase4.html
@@ -48,8 +48,7 @@
         <button onclick="decryptUserInput()">Dekrüpteeri</button>
         <p id="decryptedOutput"></p>
     
-        <!-- Siin on viide eraldi cipher.js failile -->
-        <script src="cipher.js"></script>
+    <script src="script.js"></script> <!-- Siin viitate eraldi JavaScripti failile -->
     </main>
 </body>
 </html>
