--- a/tase5.html
+++ b/tase5.html
@@ -55,7 +55,7 @@
             const message = document.getElementById("message");
 
             if (input === correctPassword) {
-                message.textContent = "Parool on õige, aga kas leiad ka järgmise?";
+                message.textContent = "Parool on õige, aga kas leiad ka järgmise taseme?";
             } else {
                 message.textContent = "Vale parool, proovige uuesti.";
             }
