--- a/tase4.html
+++ b/tase4.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="et">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,11 +33,11 @@
         <button onclick="window.location.href='https://johanjoosep.github.io/hakisedalehte/';">Kodu</button>
     </header>
     <main>
-        <h2>Tase 4</h2>
+        <h2>Tase 3</h2>
         <p>
         Siin on krüpteeritud sõnum. Püüa aru saada, millist šifreeringut kasutati ja sisesta õige parool! 
         </p>
-        <p><strong>Krüpteeritud tekst:</strong> "Wklv lv d whvw phvvdjh"</p>
+        <p><strong>Krüpteeritud tekst:</strong> "mjkvlmjkohz"</p>
         <input type="text" id="passwordBox" placeholder="Sisesta parool"> 
         <button onclick="checkPassword()">Kontrolli</button>
         
@@ -47,8 +47,9 @@
         <input type="text" id="encryptedText" placeholder="Sisesta krüpteeritud tekst">
         <button onclick="decryptUserInput()">Dekrüpteeri</button>
         <p id="decryptedOutput"></p>
-    
-    <script src="script.js"></script> <!-- Siin viitate eraldi JavaScripti failile -->
     </main>
+
+    <!-- Lisa see rida skripti laadimiseks -->
+    <script src="script.js" defer></script>
 </body>
 </html>
