--- a/index.html
+++ b/index.html
@@ -40,8 +40,14 @@
         <p>T&ouml;&ouml;tlemisel</p>
     </header>
     <main>
-        <h2>About This Page</h2>
+        <h2>Tasemed</h2>
         <button onclick="window.location.href='https://johanjoosep.github.io/hakisedalehte/tase1.html';">Tase 1</button>
+        <button onclick="window.location.href='https://johanjoosep.github.io/hakisedalehte/tase2.html';">Tase 2</button>
+        <button onclick="window.location.href='https://johanjoosep.github.io/hakisedalehte/tase3.html';">Tase 3</button>
+        <button onclick="window.location.href='https://johanjoosep.github.io/hakisedalehte/tase4.html';">Tase 4</button>
+        <button onclick="window.location.href='https://johanjoosep.github.io/hakisedalehte/tase5.html';">Tase 5</button>
+        <button onclick="window.location.href='https://johanjoosep.github.io/hakisedalehte/tase6.html';">Tase 6</button>
+        <button onclick="window.location.href='https://johanjoosep.github.io/hakisedalehte/tase7.html';">Tase 7</button>
     </main>
     <footer>
         <p>hakisedalehte@gmail.com</p>
