--- a/tase1.html
+++ b/tase1.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Parool on B47bde -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -54,7 +55,7 @@
                 const newButton = document.getElementById("newButton");
     
                 // Kontrollib kas tekstikastis olnud väärtus on õige
-                if (input === "uI8Ä%") { 
+                if (input === "B47bde") { 
                     message.style.display = "block";
                     newButton.style.display = "block";
                 } else {
