--- a/tase2.html
+++ b/tase2.html
@@ -41,7 +41,7 @@
         <input type="text" id="textBox" placeholder="Parool"> 
         <button onclick="checkInput()">Submit</button> 
         <p id="message" style="display: none;">Hea töö!</p>
-        <button id="newButton" style="display: none;" onclick="window.location.href='https://johanjoosep.github.io/hakisedalehte/tase3.html';">Go to Example Site</button> <!-- järgmisele tasemele -->
+        <button id="newButton" style="display: none;" onclick="window.location.href='https://johanjoosep.github.io/hakisedalehte/tase3.html';">Tase 3</button> <!-- järgmisele tasemele -->
         <script>
             function checkInput() {
                 const input = document.getElementById("textBox").value;
