--- a/versioon2.html
+++ b/versioon2.html
@@ -52,7 +52,7 @@
                 <p>Teretulemast! Siin saab lahendada erinevaid k&uuml;berturvalisusega seotud &uuml;lesandeid.</p>
             </div>
             <div class="terminal-box">
-                <p>$ sudo apt update<br>$ sudo apt-get install ülesanded
+                <p>$ sudo apt update<br>$ sudo apt install ülesanded
                 <br>Alla laaditud: ülesanne1<br>Alla laaditud: ülesanne2<br>...<br>7/7 ülesandest valmis lahendamiseks.
             </div>
             <h2>Tasemed</h2>
