--- a/tase2.html
+++ b/tase2.html
@@ -20,7 +20,7 @@
             <button onclick="checkInput()" class="task-button">Sisesta</button>
             <button onclick="showVihje()" class="task-button">Näita vihjet</button>
 
-            <p id="vihje" class="vihje">Vihje: Vaata lehe lähtekoodi...</p>
+            <p id="vihje" class="vihje">Vihje: Vaata veel lehe lähtekoodi...</p>
             <p id="message_vale" class="message_vale" style="display: none;">Vale vastus. Proovi uuesti</p>
             <p id="message_oige" class="message_oige" style="display: none;">Hea töö!</p>
             <button id="nextLevel" style="display: none;" class="task-button" onclick="window.location.href='tase3.html';">Tase 3</button>
