--- a/tase2.html
+++ b/tase2.html
@@ -38,7 +38,7 @@
             const messageVale = document.getElementById("message_vale");
             const messageOige = document.getElementById("message_oige");
 
-            if (input === "B47bde") {
+            if (input === "7y8kKN") {
                 message_vale.style.display = "none";
                 message_oige.style.display = "block";
                 nextLevel.style.display = "block";
