--- a/tase5.html
+++ b/tase5.html
@@ -1,44 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="et">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
     <meta name="description" content="Küberoskuste treenimis lehekülg">
-    <title>H&auml;ki seda lehek&uuml;lge</title>
-    <style> 
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        header {
-            background: #333;
-            color: #fff;
-            padding: 1rem 0;
-        }
-        main {
-            padding: 1.5rem;
-        }
-        a {
-            color: #007bff;
-            text-decoration: none;
-        }
-    </style>
+    <title>Häki seda lehekülge - Tase 5</title>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
-<body>
-    <header>
-        <button onclick="window.location.href='https://johanjoosep.github.io/hakisedalehte/';">Kodu</button>
-    </header>
-    <main>
-        <h2>Tase 5</h2>
-        <p>Lehe failides on peidetud parool. Püüa leida õige fail ja sisesta parool siia.</p>
-        <input type="text" id="passwordBox" placeholder="Sisesta parool">
-        <button onclick="checkPassword()">Kontrolli</button>
-        <p id="message" style="display: none;"></p>
-    </main>
+<body> 
+    <div class="container">
+        <div class="header">
+            <img src="ascii.png" alt="häkiSedaLehte logo" class="ascii" onclick="window.location.href='https://johanjoosep.github.io/hakisedalehte/index.html';">
+        </div>
+        <div class="main">
+            <h2>Tase 5</h2>
+            <p>Lehe failides on peidetud parool. Püüa leida õige fail ja sisesta parool siia.</p>
+            <input type="text" id="textBox" class="task-input" placeholder="Sisesta parool"> 
+            <button onclick="checkInput()" class="task-button">Sisesta</button>
+            <button onclick="showVihje()" class="task-button">Näita vihjet</button>
+
+            <p id="vihje" class="vihje">Vihje: vaata kuidas javascript parooli kontrollib ja proovi url muuta</p>
+            <p id="message_vale" class="message_vale" style="display: none;">Vale vastus. Proovi uuesti</p>
+            <p id="message_oige" class="message_oige" style="display: none;">Hea töö!</p>
+            <button id="nextLevel" style="display: none;" class="task-button" onclick="window.location.href='tase6.html';">Tase 6</button>
+        </div>
+        <div class="footer">
+        <p>hakisedalehte@gmail.com</p>
+        <p>"Suure ligipääsuga kaasneb suur vastutus"</p>
+    </div>
+</div>
 
     <script>
         // võtab parooli failist
@@ -49,18 +40,28 @@
             .then(data => {
                 correctPassword = data.trim();
             });
-            // kontrollib parooli
-        function checkPassword() {
-            const input = document.getElementById("passwordBox").value.trim();
-            const message = document.getElementById("message");
+
+        async function checkInput() {
+            const input = document.getElementById('textBox').value.trim();
+            const nextLevel = document.getElementById("nextLevel");
+            const messageVale = document.getElementById("message_vale");
+            const messageOige = document.getElementById("message_oige");
 
             if (input === correctPassword) {
-                message.textContent = "Parool on õige, aga kas leiad ka järgmise taseme?";
+                messageVale.style.display = "none";
+                messageOige.style.display = "block";
+                nextLevel.style.display = "block";
             } else {
-                message.textContent = "Vale parool, proovige uuesti.";
+                messageOige.style.display = "none";
+                nextLevel.style.display = "none";
+                messageVale.style.display = "block";
             }
+        }
 
-            message.style.display = "block";
+        function showVihje() { 
+            const vihje = document.getElementById("vihje");
+            const isHidden = window.getComputedStyle(vihje).display === "none"; /* kui vihje on peidetud (display: none), siis isHidden on True, muidu False */
+            vihje.style.display = isHidden ? "block" : "none"; /* kui isHidden on True, näita vihjet (block), kui False, peida (none) */
         }
     </script>
 </body>
