--- a/tase7.html
+++ b/tase7.html
@@ -1,76 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="et">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Häki seda lehekülge</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        header {
-            background: #333;
-            color: #fff;
-            padding: 1rem 0;
-        }
-        main {
-            padding: 1.5rem;
-        }
-        a {
-            color: #007bff;
-            text-decoration: none;
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    <meta name="description" content="Küberoskuste treenimis lehekülg">
+    <title>Häki seda lehekülge - Tase 7</title>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
-<body>
-    <header>
-        <button onclick="window.location.href='https://johanjoosep.github.io/hakisedalehte/';">Kodu</button>
-    </header>
-    <main>
-        <h2>Tase 7</h2>
-        <p>Selles ülesandes peate parooli leidmiseks bruteforcema. Parool on 4 tähte pikk ja koosneb Eesti tähestiku tähtedest</p>
+<body> 
+    <div class="container">
+        <div class="header">
+            <img src="ascii.png" alt="häkiSedaLehte logo" class="ascii" onclick="window.location.href='https://johanjoosep.github.io/hakisedalehte/index.html';">
+        </div>
+        <div class="main">
+            <h2>Tase 7</h2>
+            <p>Selles ülesandes peate parooli leidmiseks bruteforce'ima. Parool on 4 tähte pikk ja koosneb tähtedest öäüõ</p>
+            <input type="text" id="textBox" class="task-input" placeholder="Sisesta parool"> 
+            <button onclick="checkInput()" class="task-button">Sisesta</button>
+            <button onclick="showVihje()" class="task-button">Näita vihjet</button>
 
-        <input type="text" id="textBox" placeholder="Parool" />
-        <button onclick="checkInput()">Submit</button>
+            <p id="vihje" class="vihje">Vihje: tee endale programm, mis proovib kõik läbi või otsi internetist</p>
+            <p id="message_vale" class="message_vale" style="display: none;">Vale vastus. Proovi uuesti</p>
+            <p id="message_oige" class="message_oige" style="display: none;">Hea töö!</p>
+            <button id="nextLevel" style="display: none;" class="task-button" onclick="window.location.href='tase8.html';">Tase 8</button>
+        </div>
+        <div class="footer">
+        <p>hakisedalehte@gmail.com</p>
+        <p>"Suure ligipääsuga kaasneb suur vastutus"</p>
+    </div>
+</div>
 
-        <p id="message" style="display: none;">Hea töö!</p>
-        <button
-            id="newButton"
-            style="display: none;"
-            onclick="window.location.href='https://johanjoosep.github.io/hakisedalehte/tase8.html';"
-        >
-            Tase 8
-        </button>
+    <script>
+        async function hashString(message) {
+            const msgBuffer = new TextEncoder().encode(message);
+            const hashBuffer = await crypto.subtle.digest('SHA-256', msgBuffer);
+            const hashArray = Array.from(new Uint8Array(hashBuffer));
+            return hashArray.map(b => ('00' + b.toString(16)).slice(-2)).join('');
+        }
 
-        <script>
-            async function sha256(message) {
-                const msgBuffer = new TextEncoder().encode(message);
-                const hashBuffer = await crypto.subtle.digest('SHA-256', msgBuffer);
-                const hashArray = Array.from(new Uint8Array(hashBuffer));
-                return hashArray.map((b) => b.toString(16).padStart(2, '0')).join('');
+        const correctHash = "3af3a245e379ec9e556ec2e887add07bbf4a94eec50c5eeb12358d049526f0c5";
+
+        async function checkInput() {
+            const input = document.getElementById('textBox').value.trim();
+            const hashedInput = await hashString(input);
+            const nextLevel = document.getElementById("nextLevel");
+            const messageVale = document.getElementById("message_vale");
+            const messageOige = document.getElementById("message_oige");
+
+            if (hashedInput === correctHash) {
+                messageVale.style.display = "none";
+                messageOige.style.display = "block";
+                nextLevel.style.display = "block";
+            } else {
+                messageOige.style.display = "none";
+                nextLevel.style.display = "none";
+                messageVale.style.display = "block";
             }
+        }
 
-            async function checkInput() {
-                const input = document.getElementById("textBox").value.trim(); // NB! Trim eemaldab tühikud
-                const message = document.getElementById("message");
-                const newButton = document.getElementById("newButton");
-
-                const correctHash = "dd7e5b5d20408033d027e6398f28f1d36ecc83ef7967d173b194f4023f2d4bf8";
-
-                const inputHash = await sha256(input);
-                if (inputHash === correctHash) {
-                    message.style.display = "block";
-                    newButton.style.display = "inline-block";
-                } else {
-                    alert("❌ Vale parool!");
-                }
-            }
-        </script>
-    </main>
+        function showVihje() { 
+            const vihje = document.getElementById("vihje");
+            const isHidden = window.getComputedStyle(vihje).display === "none"; /* kui vihje on peidetud (display: none), siis isHidden on True, muidu False */
+            vihje.style.display = isHidden ? "block" : "none"; /* kui isHidden on True, näita vihjet (block), kui False, peida (none) */
+        }
+    </script>
 </body>
 </html>
