--- a/tase8.html
+++ b/tase8.html
@@ -1,39 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="et">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Häki seda lehekülge</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-        header {
-            background: #333;
-            color: #fff;
-            padding: 1rem 0;
-        }
-        main {
-            padding: 1.5rem;
-        }
-        a {
-            color: #007bff;
-            text-decoration: none;
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    
+    <meta name="description" content="Küberoskuste treenimis lehekülg">
+    <title>Häki seda lehekülge - Tase 8</title>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
-<body>
-    <header>
-        <button onclick="window.location.href='https://johanjoosep.github.io/hakisedalehte/';">Kodu</button>
-    </header>
-    <main>
-        <h2>Tase 8</h2>
-        <p>Rohkem ülesandeid pole veel. :(</p>
-    </main>
+<body> 
+    <div class="container">
+        <div class="header">
+            <img src="ascii.png" alt="häkiSedaLehte logo" class="ascii" onclick="window.location.href='https://johanjoosep.github.io/hakisedalehte/index.html';">
+        </div>
+        <div class="main">
+            <h2>Tase 8</h2>
+            <p>Palju õnne kui suutsid kõik ülesanded lahendada! Kahjuks rohkem ülesandeid pole.</p>
+        </div>
+        <div class="footer">
+        <p>hakisedalehte@gmail.com</p>
+        <p>"Suure ligipääsuga kaasneb suur vastutus"</p>
+    </div>
 </body>
 </html>
